# repros

./: .gitignore  CMakeLists.txt  CMakeSettings.json  android.cmake  android_modified.cmake  boost-filesystem-deps.txt  main.cpp
app/: build.gradle
app/src/androidTest/java/com/android/samples/repro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/android/samples/repro/: MainActivity.kt
app/src/test/java/com/android/samples/repro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
repro_implementation_lib/: CMakeLists.txt  implementation.cpp  implementation.h
repro_wrapper_lib/: CMakeLists.txt  wrapper.cpp
